# lstm-anomaly-detection-esp32

./: .gitignore  README.md
PythonModels/: MLP.py
esp-inference/: .gitignore  CMakeLists.txt  README.md  autoencoder_model.tflite  listener.py  sdkconfig  sdkconfig.old  step_lstm_model_with_slice.keras  step_lstm_model_with_slice.tflite
esp-inference/Model/: ModelTrainer.py  autoencoder_model.tflite  concatenated_lstm_model.keras  concatenated_lstm_model.tflite  examplemodel-copy.py  export.py  flattened_lstm_model.keras  flattened_lstm_model.tflite  generic_lstm_cells_concat.py  inference_model.py  info.py  lstm_cells.py  lstm_cells_concat.py  lstm_layer_model.keras  model_convert.py  my-sensor-anomaly-detection.ipynb  sensor-anomaly-detection.ipynb  timeserie_generator.py
esp-inference/main/: CMakeLists.txt  constants.cc  constants.h  idf_component.yml  main_functions.cc  model.cc  model.h  model1.cc
esp-inference/main/connection/: connection.cc  connection.h.example
esp-inference/main/inference/: model.cc  model.h  model_handler.cc  model_handler.h  rnn_model_handler.cc  rnn_model_handler.h
esp-inference/main/sensor/: sensor_interface.cc  sensor_interface.h
esp-mems/: CMakeLists.txt  convert_log.py  data_log.txt  data_log_frigo.txt  data_log_ventilatoreA_V3_Move.txt  data_log_ventilatoreB_V1_Still_anomaly.txt  data_log_ventilatoreB_V3_Still.txt  interpolated_data.csv  interpolated_merged_data.csv  interpolated_output.csv  listen.py  non_skipped_output.csv  output.csv  plot.py
esp-mems/main/: CMakeLists.txt  main.cc  main_functions.cc  main_functions.h  (+2 more)
(+15 files in other folders)
